@@ -69,30 +69,7 @@
 
  <br />
  <b>Дизайнеры шкурок</b>
- <dl>
-  <dt>applehq</dt><dd>
-   <a href="?skin=lb">Little Busters! (розовый)</a>,
-   <a href="?skin=term">Neon (чёрный)</a>
-  </dd><dt>EchoMateria</dt><dd>
-   <a href="?skin=aselia_01">Eien no Aselia (бордовый)</a>,
-   <a href="?skin=carnevale">Gekkou no Carnevale (черный)</a>,
-   <a href="?skin=eiel">Jingai Makyo (персиковый)</a>,
-   <a href="?skin=ever17_01">Ever17 (вода пляжа Бонди)</a>,
-   <a href="?skin=fate_01">Fate/stay night (серо-коричневый)</a>,
-   <a href="?skin=fate_02">Fate/stay night (бледно-карминный)</a>,
-   <a href="?skin=higu">Higurashi no Naku Koro ni (оранжевый)</a>,
-   <a href="?skin=lb_02">Little Busters! (желто-персиковый)</a>,
-   <a href="?skin=primitive">Primitive Link (бледно-каштановый)</a>,
-   <a href="?skin=saya">Saya no Uta (алый)</a>,
-   <a href="?skin=seinarukana">Seinarukana (белый)</a>,
-   <a href="?skin=taka">Sora no Iro, Mizu no Iro (бирюзовый)</a>,
-   <a href="?skin=tsukihime">Tsukihime (полуночно-синий)</a>,
-   <a href="?skin=tsukihime_02">Tsukihime (чёрный)</a>
-  </dd><dt>Yorhel</dt><dd>
-   <a href="?skin=angel">Angelic Serenade (тёмно-синий)</a>,
-   <a href="?skin=grey">Touhou (серый)</a>
-  </dd>
- </dl>
+:SKINCONTRIB:
  <br />
 
  <b>Пятёрка лучших контрибьютеров</b>
