@@ -1,4 +1,5 @@
 name         Angelic Serenade (dark blue)
+userid       2
 
 // text
 maintext     #ddd  // primary text color (also used for the menu links)
