@@ -1,4 +1,5 @@
 name         Eien no Aselia (falu red)
+userid       51
 
 // Eien no Aselia skin made using Minitokyo.Eien.no.Aselia.Scans_373967
 // created: 09/27/2009 by echomateria
