@@ -1,4 +1,5 @@
 name         Gekkou no Carnevale (black)
+userid       51
 
 // Gekkou no Carnevale skin made using a wallpaper comes with the game
 // created: 22/01/2009 by echomateria
