@@ -1,4 +1,5 @@
 name         Ever17 (bondi blue)
+userid       51
 
 // Ever 17 skin made using the images from the extras section of the game
 // created: 01/01/2009 by echomateria
