@@ -1,4 +1,5 @@
 name         Fate/stay night (seal brown)
+userid       51
 
 // FSN skin skin made using a popular fanart
 // created: 12/31/2008 by echomateria
