@@ -1,4 +1,5 @@
 name         Fate/stay night (pale carmine)
+userid       51
 
 // FSN skin made using a popular fanart
 // created: 01/01/2009 by echomateria
