@@ -1,4 +1,5 @@
 name         Touhou (grey)
+userid       2
 
 // text
 maintext     #222
