@@ -1,4 +1,5 @@
 name         Higurashi no Naku Koro ni (orange)
+userid       51
 
 // Higurashi no Naku Koro ni skin made using an image I found in MiniTokyo
 // created: 22/01/2009 by echomateria
