@@ -1,4 +1,5 @@
 name         Little Busters! (pink)
+userid       93
 
 // text
 maintext     #408
