@@ -1,4 +1,5 @@
 name         Little Busters! (lemon chiffon)
+userid       51
 
 // Little Busters! skin made using the Minitokyo.Little.Busters.Scans_316439
 // created: 09/27/2009 by echomateria
