@@ -1,4 +1,5 @@
 name         Primitive Link (pale chestnut)
+userid       51
 
 // Primitive Link skin made using an image that I liked without knowing what it's based on for a long time
 // created: 23/01/2009 by echomateria
