@@ -1,4 +1,5 @@
 name         Seinarukana (white)
+userid       51
 
 // Seinarukana skin made using a callendar image
 // created: 12/31/2008 by echomateria
