@@ -1,4 +1,5 @@
 name         Sora no Iro, Mizu no Iro (turquoise)
+userid       51
 
 // A Sora no Iro, Mizu no Iro skin based on a wallpaper named My Perfect Day
 // created: 23/01/2009 by echomateria
