@@ -5,6 +5,8 @@ git - ?
 	- Made the release date a required field
 	- Versioned the deleting and locking of database entries
 	- Multi's announcements are colored in blue
+	- Abstracted parsing skin config files into a SkinFile module
+	- Automatically generate the skin credits on d7, by reading the skin files
 
 2.10 - 2010-01-10
 	- VN score on tag pages use plain averages instead of bayesian rating
